Fix issue of breadcrumbs being clipped with overflow on body due to negative margin

--- a/app/styles/blocks/_breadcrumb.scss
+++ b/app/styles/blocks/_breadcrumb.scss
@@ -3,12 +3,8 @@
 #breadcrumb {
   font-size: $p-font-size;
   font-weight: bold;
-  margin: -6px 0 25px 0;
+  margin: 0 0 25px 0;
   color:$grey-dark-2;
-
-  @media (min-width:$screen-md-min) {
-    margin-top: -13px;
-  }
 
   i {
     margin:0 7px 0 9px;
